# pprlPCA

./: .gitignore  .gitmodules  .isort.cfg  0,0,0.ply  README.md  ThreadInHole_obs_20250515_144748.ply  complete.ply  debug.sh  demo2.py  env.yaml  partial_demo_2.py  pca_partial_cloud_demo.py  push_chair.sh  pyproject.toml  run.sh  show_env_obs_debug.sh  standard_view.ply  thread_in_hole.sh  view_pcd.py  view_pcd_with_pca.py
conf/: play_maniskill_env.yaml  show_env_obs.yaml  train_sac.yaml
conf/algo/: aux_sac.yaml  sac.yaml
conf/algoXenv/: aux_sac_deflect_spheres.yaml  aux_sac_grasp_lift_touch.yaml  aux_sac_open_cabinet_door.yaml  aux_sac_open_cabinet_drawer.yaml  aux_sac_push_chair.yaml  aux_sac_thread_in_hole.yaml  aux_sac_turn_faucet.yaml  sac_deflect_spheres.yaml  sac_grasp_lift_touch.yaml  sac_maniskill2.yaml  sac_open_cabinet_drawer.yaml  sac_push_chair.yaml  sac_sofaenv.yaml  sac_thread_in_hole.yaml
conf/algoXplatform/: aux_sac_workstation.yaml  sac_workstation.yaml
conf/camera_mismatch/: none.yaml  roll15.yaml  roll30.yaml  view50.yaml  x50.yaml  y50.yaml  z50.yaml
conf/env/: deflect_spheres.yaml  maniskill2.yaml  open_cabinet_door.yaml  open_cabinet_drawer.yaml  push_chair.yaml  push_chair_eval.yaml  sofaenv.yaml  (+2 more)
plotting/: better_bootstrapping.py  bootstrapping.py  functions.py  functions2.py
pprl/: builder.py  traj_info.py
scripts/: eval_camera_mismatches.py  my_show_env_obs.py  play_maniskill_env.py  run_all.sh  show_env_obs.py  train_sac.py
sofa_install_bashscripts/: conda.sh  set_sofa_env.sh  sofa.sh
tests/: test_mae.py  test_padding.py
(+66 files in other folders)
